tests pass; second iterations; still a lot of TODOs
Original commit: elastic/x-pack-elasticsearch@0e1e409c6fae3716e395f9c7c2df6c35ab68bf34